Fix delete button visibility on Section group block

--- a/src/components/manage/Blocks/Group/editor.less
+++ b/src/components/manage/Blocks/Group/editor.less
@@ -10,10 +10,6 @@
     margin-bottom: 1rem;
   }
 
-  .delete-button {
-    display: none !important;
-  }
-
   .block-add-button {
     display: none !important;
   }
